//
// @COPYRIGHT@
//
// Permission is hereby granted, free of charge, to any person obtaining a
// copy of this software and associated documentation files (the "Software"),
// to deal in the Software without restriction, including without limitation
// the rights to use, copy, modify, merge, publish, distribute, sublicense,
// and/or sell copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
// DEALINGS IN THE SOFTWARE
//

// dimbo/protobuf/cl/device_query.proto

package Dimbo.Protobuf.Clinfo;
message Device_Query {
  optional bool id_selected = 1 [default = true];
  optional bool type_selected = 0x1000 [default = true];
  optional bool vendor_id_selected = 0x1001 [default = true];
  optional bool max_compute_units_selected = 0x1002 [default = true];
  optional bool max_work_item_dimensions_selected = 0x1003 [default = true];
  optional bool max_work_group_size_selected = 0x1004 [default = true];
  optional bool max_work_item_sizes_selected = 0x1005 [default = true];
  optional bool preferred_vector_width_char_selected = 0x1006 [default = true];
  optional bool preferred_vector_width_short_selected = 0x1007 [default = true];
  optional bool preferred_vector_width_int_selected = 0x1008 [default = true];
  optional bool preferred_vector_width_long_selected = 0x1009 [default = true];
  optional bool preferred_vector_width_float_selected = 0x100A [default = true];
  optional bool preferred_vector_width_double_selected = 0x100B [default = true];
  optional bool max_clock_frequency_selected = 0x100C [default = true];
  optional bool address_bits_selected = 0x100D [default = true];
  optional bool max_read_image_args_selected = 0x100E [default = true];
  optional bool max_write_image_args_selected = 0x100F [default = true];
  optional bool max_mem_alloc_size_selected = 0x1010 [default = true];
  optional bool image2d_max_width_selected = 0x1011 [default = true];
  optional bool image2d_max_height_selected = 0x1012 [default = true];
  optional bool image3d_max_width_selected = 0x1013 [default = true];
  optional bool image3d_max_height_selected = 0x1014 [default = true];
  optional bool image3d_max_depth_selected = 0x1015 [default = true];
  optional bool image_support_selected = 0x1016 [default = true];
  optional bool max_parameter_size_selected = 0x1017 [default = true];
  optional bool max_samplers_selected = 0x1018 [default = true];
  optional bool mem_base_addr_align_selected = 0x1019 [default = true];
  optional bool min_data_type_align_size_selected = 0x101A [default = true];
  optional bool single_fp_config_selected = 0x101B [default = true];
  optional bool global_mem_cache_type_selected = 0x101C [default = true];
  optional bool global_mem_cacheline_size_selected = 0x101D [default = true];
  optional bool global_mem_cache_size_selected = 0x101E [default = true];
  optional bool global_mem_size_selected = 0x101F [default = true];
  optional bool max_constant_buffer_size_selected = 0x1020 [default = true];
  optional bool max_constant_args_selected = 0x1021 [default = true];
  optional bool local_mem_type_selected = 0x1022 [default = true];
  optional bool local_mem_size_selected = 0x1023 [default = true];
  optional bool error_correction_support_selected = 0x1024 [default = true];
  optional bool profiling_timer_resolution_selected = 0x1025 [default = true];
  optional bool endian_little_selected = 0x1026 [default = true];
  optional bool available_selected = 0x1027 [default = true];
  optional bool compiler_available_selected = 0x1028 [default = true];
  optional bool execution_capabilities_selected = 0x1029 [default = true];
  optional bool queue_properties_selected = 0x102A [default = true];
  optional bool name_selected = 0x102B [default = true];
  optional bool vendor_selected = 0x102C [default = true];
  optional bool driver_version_selected = 0x102D [default = true];
  optional bool profile_selected = 0x102E [default = true];
  optional bool version_selected = 0x102F [default = true];
  optional bool extensions_selected = 0x1030 [default = true];
  optional bool platform_id_selected = 0x1031 [default = true];
  optional bool double_fp_config_selected = 0x1032 [default = true];
  optional bool preferred_vector_width_half_selected = 0x1034 [default = true];
  optional bool host_unified_memory_selected = 0x1035 [default = true];
  optional bool native_vector_width_char_selected = 0x1036 [default = true];
  optional bool native_vector_width_short_selected = 0x1037 [default = true];
  optional bool native_vector_width_int_selected = 0x1038 [default = true];
  optional bool native_vector_width_long_selected = 0x1039 [default = true];
  optional bool native_vector_width_float_selected = 0x103A [default = true];
  optional bool native_vector_width_double_selected = 0x103B [default = true];
  optional bool native_vector_width_half_selected = 0x103C [default = true];
  optional bool opencl_c_version_selected = 0x103D [default = true];
  optional bool linker_available_selected = 0x103E [default = true];
  optional bool built_in_kernels_selected = 0x103F [default = true];
  optional bool image_max_buffer_size_selected = 0x1040 [default = true];
  optional bool image_max_array_size_selected = 0x1041 [default = true];
  optional bool parent_device_id_selected = 0x1042 [default = true];
  optional bool partition_max_sub_devices_selected = 0x1043 [default = true];
  optional bool partition_properties_selected = 0x1044 [default = true];
  optional bool partition_affinity_domain_selected = 0x1045 [default = true];
  optional bool partition_type_selected = 0x1046 [default = true];
  optional bool reference_count_selected = 0x1047 [default = true];
  optional bool preferred_interop_user_sync_selected = 0x1048 [default = true];
  optional bool printf_buffer_size_selected = 0x1049 [default = true];
  optional bool image_pitch_alignment_selected = 0x104A [default = true];
  optional bool image_base_address_alignment_selected = 0x104B [default = true];
}

// vim: set expandtab tabstop=2 shiftwidth=2:
// vim: set foldmethod=marker foldcolumn=4:
// vim: set syntax=proto:
